--- a/css/main.css
+++ b/css/main.css
@@ -125,107 +125,6 @@ table {
   box-sizing: border-box;
 }
 
-.nav {
-  width: 100%;
-  top: 0px;
-  position: sticky;
-  /* overflow: hidden; */
-  background-color: #fff;
-  position: relative;
-  box-shadow: 0px 2px #f7931e;
-}
-
-.nav > .nav-header {
-  display: inline;
-}
-
-.nav > .nav-header > .nav-title {
-  display: inline-block;
-  font-size: 22px;
-  color: #fff;
-  padding: 10px;
-}
-
-.nav-title img {
-  width: 64px;
-  padding-left: 1rem;
-}
-
-.nav > .nav-btn {
-  display: none;
-}
-/* position: fixed;
-top: 0px;
-z-index: 10; */
-
-.nav > .nav-links {
-  display: inline;
-  float: right;
-  font-size: 18px;
-}
-
-.nav > .nav-links > a {
-  display: inline-block;
-  padding: 13px 10px 13px 10px;
-  text-decoration: none;
-  color: #141414;
-}
-
-.nav > .nav-links > a:hover {
-  background-color: #f9ab4f;
-}
-
-.nav > #nav-check {
-  display: none;
-}
-
-@media (max-width: 900px) {
-  .nav > .nav-btn {
-    display: inline-block;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-  }
-  .nav > .nav-btn > label {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    padding: 13px;
-  }
-  .nav > .nav-btn > label:hover,
-  .nav #nav-check:checked ~ .nav-btn > label {
-    background-color: #eee;
-  }
-  .nav > .nav-btn > label > span {
-    display: block;
-    width: 25px;
-    height: 10px;
-    border-top: 2px solid #eee;
-  }
-  .nav > .nav-links {
-    position: absolute;
-    display: block;
-    width: 100%;
-    background-color: #fff;
-    height: 0px;
-    transition: all 0.3s ease-in;
-    overflow-y: hidden;
-    top: 50px;
-    left: 0px;
-  }
-  .nav > .nav-links > a {
-    display: block;
-    width: 100%;
-  }
-  .nav > #nav-check:not(:checked) ~ .nav-links {
-    height: 0px;
-  }
-  .nav > #nav-check:checked ~ .nav-links {
-    height: calc(100vh - 50px);
-    overflow-y: auto;
-  }
-}
-
 body {
   font-family: Barlow, Helvetica, sans-serif;
   color: #4b4949;
@@ -301,6 +200,84 @@ body {
   margin-right: 0rem;
   z-index: -1;
   margin-top: 3.75rem;
+}
+
+.navbar {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 10;
+  background-color: #eee;
+  padding: 10px 5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 2px 2px #f7931e;
+}
+
+.nav-logo {
+  display: block;
+  height: 48px;
+}
+
+.navbar-menu {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  list-style-image: none;
+}
+
+.navbar-menu a {
+  text-decoration: none;
+  font-weight: 600px;
+  color: #141414;
+}
+
+.navbar-btn {
+  display: none;
+}
+
+@media only screen and (max-width: 860px) {
+  .navbar {
+    flex-direction: column;
+  }
+
+  .logo-container {
+    width: 100%;
+    transition: all 0.3s ease-in;
+  }
+
+  .navbar-menu {
+    display: none;
+    width: 100%;
+  }
+
+  .navbar-menu > .menu-item {
+    transition: all 0.3s ease-in;
+  }
+
+  .menu-item {
+    display: block;
+    width: 100%;
+    padding: 5px 0;
+    text-align: end;
+  }
+
+  .navbar-btn {
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 5%;
+  }
+
+  .active {
+    display: block;
+  }
+}
+
+.menu-item {
+  display: inline-block;
+  margin-left: 10px;
 }
 
 .intro {
