--- a/css/main.css
+++ b/css/main.css
@@ -1,218 +1,131 @@
 /* CSS Reset */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}max-width
-ol, ul {
-    list-style: none;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
-blockquote, q {
-    quotes: none;
+max-width ol,
+ul {
+  list-style: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-body{
-    background-color:#ffecd4;
-    font-family: Barlow, Helvetica, sans-serif;
-    color: #423d38;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-.bg-white {
-  background-color: white;
+* {
+  box-sizing: border-box;
 }
 
-
-.navbar {
-  display: flex;
-  justify-content: space-around;
-  background-color: #f7931e;
-  padding: .75rem;
-  position: fixed;
-  top: 0;
-  overflow: hidden;
-  width: 100%;
-}
-
-.navbar > .nav-link:hover{
-  border-radius: 5px;
-  border-color: white;
-  font-weight: 500;
-}
-
-
-
-@media screen and (max-width: 768px) {
-
-  .navbar a:not(:last-child) {display: none;}
-  .navbar a.icon {
-    color: black;
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .navbarresponsive {
-    background-color: #f7931e;
-  }
-  .navbarresponsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 20px;
-  }
-  .navbarresponsive .nav-link {
-    float: none;
-    display: flex;
-    text-align: left;
-    text-decoration: none;
-    color: white;
-    padding: 20px;
-  }
-  .navbarresponsive .nav-link:hover {
-    background-color: #FBC689;
-    color: #141414;
-  }
-
-  .navbarresponsive .nav-link:focus {
-    box-shadow: 0 0 10px#6177E5, 0 0 20px#6177E5, 0 0 40px#6177E5;
-    background-color: #6177E5;
-  }
-}
-
-@media (min-width: 1024px){
-    .icon {
-     display: none;
-  }
-}
-
-@media (max-width: 1024px) {
-
-    .main{
-        flex-direction: column;
-        justify-content: center;
-    }
-    .intro--descricao{
-        margin: 0;
-        font-size: .75rem;
-    }
-    .intro-heading{
-        font-size: 1rem;
-        line-height: 1rem;
-    }
-    .main-logo{
-      max-width: 30%;
-    }
-    .footer--note {
-      align-self: center;
-      font-size: .5rem;
-    }
-}
-/* Regras de estilo para dispositivos com largura a partir de 768 pixels a 1024px (tablets e alguns smartphones) */
-@media (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (-webkit-min-device-pixel-ratio: 1) {
-    .footer {
-      display: inline-block;
-      text-align: center;
-      padding-top: 6rem;
-      margin-bottom: 2rem;
-    }
-}
-/* Regras de estilo para dispositivos com largura menor que 768 pixels (tablets e alguns smartphones) */
-@media (max-width: 767px) {
-  body {
-    font-size: 16px;
-  }
-  .social-media{
-    font-weight: 600;
-    text-align: right;
-    margin-top: 2rem;
-    font-size: 1.25rem;
-  }
-  .footer {
-    font-size: .25rem;
-    text-align: center;
-    padding-bottom: 1rem;
-  }
-  .navbar {
-    flex-direction: row;
-}
-}
-/* Regras de estilo para dispositivos com largura menor que 768 pixels (tablet) */
-@media (max-width: 860px) {
-    body {
-      font-size: 16px;
-    }
-    .social-media{
-      font-weight: 600;
-      text-align: right;
-      margin-top: 2rem;
-      font-size: 1.25rem;
-    }
-    .main-hero{
-      display: none;
-    }
-    .main--descricao-callout{
-      font-size: .75rem;
-      color:blue;
-    }
-    .localizacao{
-      display: flex;
-      flex-direction: column;
-    }
-    .localizacao--texto {
-      padding-bottom: 1rem;
-      align-items: center;
-    }
-}
-/* Regras de estilo para dispositivos com largura menor que 576 pixels (celular) */
-@media (max-width: 575px) {
-    body {
-      font-size: 14px;
-    }
-    .main-logo{
-      max-width: 130px;
-    }
-    .sponsor--section {
-      display: flex;
-      flex-direction: column;
-  }
-  iframe {
-    width: auto;
-  }
-}
-body{
-  background: hsla(191, 60%, 89%, 1);
-  background: linear-gradient(315deg, hsla(191, 60%, 89%, 1) 0%, hsla(56, 59%, 86%, 1) 50%, hsla(25, 85%, 69%, 1) 100%);
+body {
   font-family: Barlow, Helvetica, sans-serif;
   color: #4b4949;
   height: 100%;
@@ -220,62 +133,184 @@ body{
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
-.main--descricao-callout{
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+  margin: 4rem;
+  padding: 3rem;
+}
+
+.header__callout__heading {
   font-weight: 700;
-    font-size: 2rem;
+  font-size: 3rem;
   padding: 1rem;
   color: red;
 }
-.main-chamada {
-  display: flex;
-  flex-direction: column;
-  justify-content:space-around;
-  align-items: center;
-}
-.main {
-  display: flex;
-  justify-content: space-around;
-  max-width: 100%;
-  z-index: -1;
-  margin-bottom: 2rem;
-  flex-direction: column;
+
+.header__callout__subheading {
+  font-weight: 700;
+  font-size: 2rem;
+  padding: 1rem;
+  color: #f7931e;
 }
 
-.main-hero{
+.header__callout__address {
+  padding: 1rem;
+}
+
+.header__callout__address a {
+  font-weight: 500;
+  font-size: 1rem;
+  padding: 1rem;
+  color: #299ba6;
+  text-decoration: none;
+}
+
+.header__intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3rem;
+  align-items: flex-start;
+}
+
+.header__hero {
   left: 0px;
-  position: absolute;
+  position: relative;
   z-index: -1;
   max-height: 465px;
+  border-radius: 80px;
 }
-.main-logo{
+
+.header__c4p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  padding: 0.75rem;
+}
+
+.main-logo {
   max-width: 60%;
   height: auto;
   margin-right: 0rem;
   z-index: -1;
   margin-top: 3.75rem;
 }
-.intro {
+
+.navbar {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 10;
+  background-color: #eee;
+  padding: 10px 5%;
   display: flex;
-  margin-top: 2rem;
-  justify-content:center;
-  flex-direction: row;
-  background-color: #299BA6;
-  color:#fff;
-  max-width: 900px;
-  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 2px 2px #f7931e;
 }
-.intro--descricao h2{
+
+.nav-logo {
+  display: block;
+  height: 48px;
+}
+
+.navbar-menu {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  list-style-image: none;
+}
+
+.navbar-menu a {
+  text-decoration: none;
+  font-weight: 600px;
+  color: #141414;
+}
+
+.navbar-btn {
+  display: none;
+}
+
+@media only screen and (max-width: 860px) {
+  .navbar {
+    flex-direction: column;
+  }
+
+  .logo-container {
+    width: 100%;
+    transition: all 0.3s ease-in;
+  }
+
+  .navbar-menu {
+    display: none;
+    width: 100%;
+  }
+
+  .navbar-menu > .menu-item {
+    transition: all 0.3s ease-in;
+  }
+
+  .menu-item {
+    display: block;
+    width: 100%;
+    padding: 5px 0;
+    text-align: end;
+  }
+
+  .navbar-btn {
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 5%;
+  }
+
+  .active {
+    display: block;
+  }
+}
+
+.menu-item {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.intro {
+  margin: auto;
+  display: flex;
+  max-width: 1200px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.intro__wrapper {
   margin: 2rem;
-  text-align: center;
-  font-size: 1.5rem;
-  line-height: 2.5rem;
-  max-width: 100%;
-  margin-top: 2rem;
-  font-weight: 700;
 }
-.intro-cidade p{
-  margin:2rem;
-  font-size: 1.5rem;
+
+.intro__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #141414;
+  text-align: center;
+}
+
+.intro__headline {
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin: 2rem;
+}
+
+.intro__subheadline {
+  margin: 2rem;
+  font-size: 1rem;
 }
 
 .intro--orientacoes img {
@@ -289,53 +324,41 @@ body{
   justify-content: center;
 }
 
-.intro-cidade--callout {
+.intro__city--callout {
   text-align: center;
 }
 
-.social-media{
-  margin: auto;
-  max-width: 100%;
-  padding: 10px;
-  text-align: right;
-  font-weight: 700;
-  margin-bottom: 3rem;
-}
-
-.intro-heading{
-  font-size: 3rem;
+.intro__descritpion p {
   line-height: 3rem;
+  font-size: 1.5rem;
+  margin-top: 0.75rem;
+  margin-bottom: 1.25rem;
+  height: auto;
 }
 
-.intro--descricao{
-  margin-top: .75rem;
-}
-
-.left {
-  flex: 1;
-  background-color: #4b4949;
-}
-
-.right {
-  flex: 1;
-  background-color: #81e281;
+.localizacao--texto {
+  padding-bottom: 1rem;
+  text-align: left;
+  margin-right: 1.75rem;
+  margin-right: 1.75rem;
 }
 
 .sponsor {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-evenly;
-   text-align: center;
-   padding: 1rem;
-   padding-top: 3rem;
-   flex-direction: column;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  text-align: center;
+  padding: 1rem;
+  padding-top: 3rem;
+  flex-direction: column;
 }
 
-.sponsor h2, .localizacao--texto h2 {
+.sponsor h2,
+.localizacao--texto h2 {
   padding-bottom: 1rem;
   font-size: 1.75rem;
   font-weight: 700;
-  color:#141414;
+  color: #141414;
 }
 
 .sponsor--section {
@@ -343,8 +366,14 @@ body{
   justify-content: center;
   align-items: center;
   padding: 1rem;
+  margin: 4rem;
   column-gap: 2rem;
+  margin: auto;
 }
+
+/* .sponsor-texto .c4p {
+  margin: 60px;
+} */
 
 .sponsors-list {
   padding-bottom: 3rem;
@@ -352,11 +381,13 @@ body{
   text-align: center;
 }
 
-.sponsor-texto h3, .sponsors-list h3, .localizacao--texto h3{
-    font-size:1.25rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-    /* margin-right: 1rem; */
+.sponsor-texto h3,
+.sponsors-list h3,
+.localizacao--texto h3 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
 }
 
 .sponsors-list img {
@@ -366,44 +397,79 @@ body{
   max-height: 100px;
 }
 
-.sponsor-texto h3,.sponsors-list h4, .sponsor-texto p{
-  color:#000;
+.sponsor-texto h3,
+.sponsors-list h4,
+.sponsor-texto p {
+  color: #fff;
+  margin-bottom: 1.5rem;
 }
 
- h4 {
-  color:#000;
+h4 {
+  color: #000;
   font-weight: 700;
 }
 
-.sponsor-texto p{
+.sponsor {
+  background-color: #141414;
+}
+
+.sponsor h2 {
+  color: #f7931e;
+}
+
+.sponsors-list {
+  margin-top: 2rem;
+}
+
+.sponsor-texto {
+  margin: 2.75rem;
+}
+
+.sponsor-texto p {
   font-size: 1rem;
-  margin-bottom: 1rem;
   font-weight: 500;
 }
 
 .sponsors-list__apoiadores {
   padding-top: 3rem;
-
 }
 
-.sponsors-flex, .sponsors-list__bronze, .sponsors-list__ouro {
+.sponsors-flex,
+.sponsors-list__bronze,
+.sponsors-list__ouro {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  gap:2.5rem;
+  gap: 40px;
+}
+
+.sponsors-list__ouro img {
+  width: 240px;
+}
+
+.sponsors-list__bronze img {
+  width: 70%;
+}
+
+.sponsors-list__apoiadores img {
+  width: 60%;
 }
 
 @media (min-width: 768px) {
-  .sponsors-flex, .sponsors-list__bronze, .sponsors-list__ouro {
+  .sponsors-flex,
+  .sponsors-list__bronze,
+  .sponsors-list__ouro {
     flex-direction: row;
   }
 }
 
 @media (min-width: 1440px) {
-  .sponsors-flex, .sponsors-list__bronze, .sponsors-list__ouro {
-    gap: 2rem;
+  .sponsors-flex,
+  .sponsors-list__bronze,
+  .sponsors-list__ouro {
+    gap: 5rem;
   }
 }
 
@@ -411,7 +477,7 @@ body{
   display: flex;
   justify-content: space-evenly;
   padding: 3rem;
-  align-items:center;
+  align-items: center;
 }
 
 .orientacoes {
@@ -420,85 +486,56 @@ body{
 }
 
 .mapouter {
-    border-radius: 20px;
-    max-width: 100%;
-}
-
-.social-media{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-weight: 600;
-  margin-top: 2rem;
-  font-size: 1.25rem;
-  align-items:center;
-}
-
-.social-media--icons{
-  width: 24px;
-  text-align: center;
-  margin-top: 2rem;
-  margin-right: 1rem;
-}
-
-.navbar button{
-    border:0;
-    background-color: #F2A56D;
-}
-
-.navbar button:hover{
-    border:white;
-    background-color: #299BA6;
-}
-
-.navbar a, .social-media a, .social-media a:link, .social-media a:visited {
-  text-decoration: none;
-  color: #4b4949;
-}
-
-.social-media ul {
-  text-align: center;
-}
-
-.social-media--icons ul {
-  display: inline-block;
-  padding: 10px;
-  margin-top: 5px;
-  font-weight: 400;
-}
-
-.social-media ul li a {
-  display: flex;
-  justify-content: flex-start;
-  margin: 0;
-  padding-right: 1rem;
-  align-items: flex-end;
-  flex-direction: row;
-}
-
-.footer {
-  padding-bottom: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
+  border-radius: 20px;
   max-width: 100%;
 }
 
-.footer--note {
-  font-size: 1rem;
-  color: inherit;
-}
-
-.c4p {
+.social-media {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-evenly;
+  font-weight: 600;
+  margin-top: 2rem;
+  font-size: 1.25rem;
   align-items: center;
-  height: 100px;
 }
 
-.btn-c4p, .btn-subscriptions {
+.social-media--icons {
+  width: 24px;
+  text-align: center;
+  margin: 0.75rem;
+}
+
+footer {
+  width: 100%;
+  color: #fff;
+  background-color: #141414;
+  padding-bottom: 2rem;
+}
+
+.footer__social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  text-align: center;
+  padding: 2rem;
+}
+
+.footer__note {
+  font-size: 0.75rem;
+}
+
+.social-media a,
+.social-media a:link,
+.social-media a:visited .footer__footnote a {
+  font-size: 1rem;
+  text-decoration: none;
+  color: #fff;
+}
+
+.btn-c4p,
+.btn-subscriptions {
   padding: 10px 20px;
   color: #ffffff;
   background-color: #f7931e;
@@ -516,10 +553,132 @@ body{
 }
 
 .btn-subscriptions {
-  background-color: #182C93;
+  background-color: #182c93;
 }
 
 .btn-subscriptions:hover {
-  background-color:#6177E5;
+  background-color: #6177e5;
   box-shadow: 0 0 10px#6177E5, 0 0 20px#6177E5, 0 0 40px#6177E5;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__footnote {
+    font-size: 0.75rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .icon {
+    display: none;
+  }
+}
+
+@media (max-width: 1024px) {
+  .main {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .intro__description {
+    margin: 0;
+    font-size: 0.75rem;
+  }
+  .intro-heading {
+    font-size: 1rem;
+    line-height: 1rem;
+  }
+
+  .footer--note {
+    align-self: center;
+    font-size: 0.5rem;
+  }
+}
+/* Regras de estilo para dispositivos com largura a partir de 768 pixels a 1024px (tablets e alguns smartphones) */
+@media (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .footer {
+    display: inline-block;
+    text-align: center;
+    padding-top: 6rem;
+    margin-bottom: 2rem;
+  }
+}
+/* Regras de estilo para dispositivos com largura menor que 768 pixels (tablets e alguns smartphones) */
+@media (max-width: 767px) {
+  body {
+    font-size: 16px;
+  }
+  .social-media {
+    font-weight: 600;
+    text-align: right;
+    margin-top: 2rem;
+    font-size: 1.25rem;
+  }
+  .footer {
+    font-size: 0.25rem;
+    text-align: center;
+    padding-bottom: 1rem;
+  }
+  i:before,
+  .i:before {
+    display: none;
+  }
+}
+/* Regras de estilo para dispositivos com largura menor que 768 pixels (tablet) */
+@media (max-width: 860px) {
+  body {
+    font-size: 16px;
+  }
+
+  .social-media {
+    font-weight: 600;
+    text-align: right;
+    margin-top: 2rem;
+    font-size: 1.25rem;
+  }
+
+  .header {
+    display: flex;
+    justify-content: center;
+    z-index: -1;
+    flex-direction: row;
+    padding: 1rem;
+    align-items: center;
+  }
+
+  .header__hero {
+    display: none;
+  }
+
+  .header__callout {
+    color: blue;
+  }
+
+  .localizacao {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .localizacao--texto {
+    margin-bottom: 1rem;
+    text-align: center;
+    margin-right: 1.5rem;
+  }
+}
+/* Regras de estilo para dispositivos com largura menor que 576 pixels (celular) */
+@media (max-width: 767px) {
+  body {
+    font-size: 14px;
+  }
+
+  .main-logo {
+    max-width: 130px;
+  }
+
+  .sponsor--section {
+    display: flex;
+    flex-direction: column;
+  }
+
+  iframe {
+    width: auto;
+  }
 }
