--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -354,6 +354,7 @@ body {
 }
 
 .sponsor h2,
+.keynote h2,
 .localizacao--texto h2 {
   padding-bottom: 1rem;
   font-size: 1.75rem;
@@ -375,6 +376,13 @@ body {
   padding-bottom: 3rem;
   align-self: center;
   text-align: center;
+  border-radius: 2rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding-top: 2rem;
+}
+
+.sponsors-list__block {
+  margin: 1.5rem;
 }
 
 .sponsor-texto h3,
@@ -405,7 +413,7 @@ h4 {
 }
 
 .sponsor h2 {
-  color: #39b54a;
+  color: #cd7f32;
 }
 
 .sponsors-list {
@@ -471,7 +479,7 @@ h4 {
 }
 
 .sponsors-list__heading--apoiadores {
-  color: #39b54a;
+  color: #182c93;
 }
 
 @media (min-width: 768px) {
@@ -480,6 +488,13 @@ h4 {
   .sponsors-list--ouro,
   .sponsors-list--diamante {
     flex-direction: row;
+  }
+  .keynote__wrapper {
+    display: flex;
+    flex-direction: row;
+  }
+  .keynote__wrapper > * {
+    flex: 1;
   }
 }
 
@@ -490,6 +505,43 @@ h4 {
   .sponsors-list--diamante {
     gap: 5rem;
   }
+}
+
+.keynote h2 {
+  color: #182c93;
+  text-align: center;
+}
+
+.keynote__card {
+  padding: 1.75rem;
+  margin: 1rem;
+  border: 1px solid rgba(100, 100, 111, 0.2);
+  border-radius: 2rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  text-align: center;
+}
+
+.keynote__name {
+  font-weight: 700;
+  color: #3e59e0;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: larger;
+}
+
+.keynote__avatar--img {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+
+  &:hover {
+    transform: scale(1.25);
+    background: #00d1b2;
+  }
+}
+
+.keynote__linkedin {
+  margin: 2rem;
 }
 
 .localizacao {
@@ -583,6 +635,12 @@ footer {
 @media screen and (max-width: 768px) {
   .footer__footnote {
     font-size: 0.75rem;
+  }
+
+  .keynote__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
