--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -343,7 +343,8 @@ body {
   margin-right: 1.75rem;
 }
 
-.sponsor {
+.sponsor,
+.doacoes {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -353,8 +354,13 @@ body {
   flex-direction: column;
 }
 
+.doacoes {
+  margin: 1rem;
+}
+
 .sponsor h2,
 .keynote h2,
+.doacoes h3,
 .localizacao--texto h2 {
   padding-bottom: 1rem;
   font-size: 1.75rem;
@@ -403,7 +409,8 @@ body {
 
 .sponsors-list h4,
 .sponsor-texto h3,
-.sponsor-texto p {
+.sponsor-texto p,
+.doacoes p {
   margin-bottom: 1.5rem;
 }
 
@@ -412,7 +419,8 @@ h4 {
   font-weight: 700;
 }
 
-.sponsor h2 {
+.sponsor h2,
+.doacoes h3 {
   color: #cd7f32;
 }
 
